Work around OTP 21 erlang:get_stacktrace/0 deprecation
Use stacktrace_compat parse transform to workaround the deprecation of erlang:get_stacktrace/0 in OTP 21.

--- a/rebar.config
+++ b/rebar.config
@@ -8,4 +8,14 @@
            ,{plt_apps, top_level_deps}
            ,{plt_prefix, "director"}]}.
 
+{deps, [
+    % Handle stacktrace changes in OTP 21
+    {stacktrace_compat, "1.0.1"}
+]}.
+
+{erl_opts, [
+    % stacktrace_compat parse transform
+    {parse_transform, stacktrace_transform}
+]}.
+
 %%{plugins, [rebar3_hex]}.
